Fixed x86 tests